Add opens for Java 16