@@ -219,6 +219,10 @@
              property="java9.test.option.4"
              value="--add-opens=java.base/java.util=ALL-UNNAMED"/>
   <property name="java9.test.option.4" value="-Dtest.4=4"/>
+  <available classname="java.lang.reflect.InaccessibleObjectException"
+             property="java9.test.option.5"
+             value="--add-opens=java.base/java.util.concurrent=ALL-UNNAMED"/>
+  <property name="java9.test.option.5" value="-Dtest.5=5"/>
 
   <!-- Classpaths -->
   <path id="compile.classpath">
@@ -1536,6 +1540,7 @@
         <jvmarg value="${java9.test.option.2}"/>
         <jvmarg value="${java9.test.option.3}"/>
         <jvmarg value="${java9.test.option.4}"/>
+        <jvmarg value="${java9.test.option.5}"/>
 
         <classpath refid="tomcat.test.run.classpath" />
 
